crates/schematic/tests/snapshots/generator_test__api_docs__custom_tags_and_description.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "generate(generator, ApiDocsOptions\n{\n    render_tags:\n    Box::new(|tags|\n    {\n        tags.iter().map(|tag| match tag\n        {\n            ApiDocsTag::Deprecated(Some(message)) =>\n            { format!(\"<Badge>{tag}</Badge> {message}\") } _ =>\n            format!(\"<Badge>{tag}</Badge>\"),\n        }).collect::<Vec<_>>().join(\" \")\n    }), render_description:\n    Box::new(|description|\n    { format!(\":::note\\n{}\\n:::\", description.trim()) }),\n    ..ApiDocsOptions::default()\n})"
---
---
title: DocsConfig
---

:::note
A config that exercises everything the docs can describe.

- With a list item.
- And another.
:::

## Index

| Property | Type | Description |
| --- | --- | --- |
| [`boolean`](#boolean) | `boolean` | An optional boolean. |
| [`duration`](#duration) | `{ nanos: number, secs: number }` | An inline struct. |
| [`ident`](#ident) | `string` | A constrained string. |
| [`level`](#level) | [`BasicEnum`](./BasicEnum.md) | An enum, which carries its own default. |
| [`list`](#list) | [`AnotherConfig`](./AnotherConfig.md)`[]` | A list of nested configs. |
| [`map`](#map) | `Record<string, `[`BasicEnum`](./BasicEnum.md)`>` | A map of enums. |
| [`name`](#name) | `string` | A string with a default and aliases. |
| [`nested`](#nested) | [`AnotherConfig`](./AnotherConfig.md) | An optional nested config. |
| [`nullable_items`](#nullable_items) | `(`[`BasicEnum`](./BasicEnum.md)` \| null)[]` | A list of nullable enums. |
| [`old_name`](#old_name) | `string` | A deprecated field, use `name` instead. |
| [`pair`](#pair) | `[string, number]` | A tuple of values. |
| [`port`](#port) | `number` | A constrained integer. |
| [`targets`](#targets) | [`Targets`](./Targets.md) | A union of a list or a map. |

## Properties

### `boolean`

<Badge>Optional</Badge>

:::note
An optional boolean.
:::

| Attribute | Value |
| --- | --- |
| Type | `boolean` |

### `duration`

<Badge>Required</Badge>

:::note
An inline struct.
:::

| Attribute | Value |
| --- | --- |
| Type | `{ nanos: number, secs: number }` |

### `ident`

<Badge>Nullable</Badge>

:::note
A constrained string.
:::

| Attribute | Value |
| --- | --- |
| Type | `string` |
| Pattern | `^[a-z][a-z0-9-]*$` |
| Min length | `1` |
| Max length | `32` |

### `level`

<Badge>Required</Badge>

:::note
An enum, which carries its own default.
:::

| Attribute | Value |
| --- | --- |
| Type | [`BasicEnum`](./BasicEnum.md) |
| Default | `"foo"` |
| Values | `"foo"`, `"bar"`, `"baz"` |

### `list`

<Badge>Required</Badge>

:::note
A list of nested configs.
:::

| Attribute | Value |
| --- | --- |
| Type | [`AnotherConfig`](./AnotherConfig.md)`[]` |

### `map`

<Badge>Required</Badge>

:::note
A map of enums.
:::

| Attribute | Value |
| --- | --- |
| Type | `Record<string, `[`BasicEnum`](./BasicEnum.md)`>` |

### `name`

<Badge>Optional</Badge>

:::note
A string with a default and aliases.
:::

| Attribute | Value |
| --- | --- |
| Type | `string` |
| Default | `"hello"` |
| Aliases | `label`, `title` |
| Environment variable | `DOCS_NAME` |

### `nested`

<Badge>Nullable</Badge>

:::note
An optional nested config.
:::

| Attribute | Value |
| --- | --- |
| Type | [`AnotherConfig`](./AnotherConfig.md) |

### `nullable_items`

<Badge>Required</Badge>

:::note
A list of nullable enums.
:::

| Attribute | Value |
| --- | --- |
| Type | `(`[`BasicEnum`](./BasicEnum.md)` \| null)[]` |

### `old_name`

<Badge>Nullable</Badge> <Badge>Deprecated</Badge> Use `name` instead.

:::note
A deprecated field, use `name` instead.
:::

| Attribute | Value |
| --- | --- |
| Type | `string` |

### `pair`

<Badge>Required</Badge>

:::note
A tuple of values.
:::

| Attribute | Value |
| --- | --- |
| Type | `[string, number]` |

### `port`

<Badge>Required</Badge>

:::note
A constrained integer.
:::

| Attribute | Value |
| --- | --- |
| Type | `number` |
| Minimum | `1024` |
| Maximum | `49151` |

### `targets`

<Badge>Required</Badge>

:::note
A union of a list or a map.
:::

| Attribute | Value |
| --- | --- |
| Type | [`Targets`](./Targets.md) |

## References

- [`AnotherConfig`](./AnotherConfig.md)
- [`BasicEnum`](./BasicEnum.md)
- [`Targets`](./Targets.md)
