crates/schematic/tests/snapshots/generator_test__api_docs__generate_all_writes_every_page_and_an_index.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "fs::read_to_string(dir.join(\"index.md\")).unwrap()"
---
---
title: Index
---

## Types

| Type | Kind | Description |
| --- | --- | --- |
| [`AnotherConfig`](./AnotherConfig.md) | Struct | Some comment. |
| [`BasicEnum`](./BasicEnum.md) | Enum | Docblock comment. |
| [`FallbackEnum`](./FallbackEnum.md) | Enum |  |
| [`GenConfig`](./GenConfig.md) | Struct |  |
