crates/schematic/tests/snapshots/generator_test__api_docs__union.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "generate(generator, ApiDocsOptions::default())"
---
---
title: Targets
---

Either a list of targets, or a map of targets to paths.

## Variants

### `string[]`

A list of targets.

| Attribute | Value |
| --- | --- |
| Type | `string[]` |

### `Record<string, string>`

A map of targets.

| Attribute | Value |
| --- | --- |
| Type | `Record<string, string>` |
