crates/schematic/tests/snapshots/generator_test__api_docs__unit_enum.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "generate(generator, ApiDocsOptions::default())"
---
---
title: BasicEnum
---

Docblock comment.

## Variants

### `foo`

> **Default**

| Attribute | Value |
| --- | --- |
| Value | `"foo"` |

### `bar`

| Attribute | Value |
| --- | --- |
| Value | `"bar"` |

### `baz`

| Attribute | Value |
| --- | --- |
| Value | `"baz"` |
